tests/baselines/reference/invalid-duplicate-groupspecifier-2-u.errors.txt
invalid-duplicate-groupspecifier-2-u.ts(18,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-duplicate-groupspecifier-2-u.ts(18,11): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-duplicate-groupspecifier-2-u.ts(18,18): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-duplicate-groupspecifier-2-u.ts(18,19): error TS1513: Named capturing groups with the same name must be mutually exclusive to each other.
invalid-duplicate-groupspecifier-2-u.ts(18,24): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-duplicate-groupspecifier-2-u.ts (5 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifiers within one alternative must be unique.
    info: |
      It is a Syntax Error if |Pattern| contains two distinct |GroupSpecifier|s
      _x_ and _y_ for which CapturingGroupName(_x_) is the same as
      CapturingGroupName(_y_) and such that CanBothParticipate(_x_, _y_) is *true*.
    esid: sec-patterns-static-semantics-early-errors
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>a)(?<b>b)(?<a>a)/u;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
              ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
                     ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
                      ~
!!! error TS1513: Named capturing groups with the same name must be mutually exclusive to each other.
                           ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    